Fixed BUG#8757: Stored Procedures: Scope of Begin and End Statements do not work properly.